--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Carthage/Checkouts/ios-zfile"]
-	path = Carthage/Checkouts/ios-zfile
-	url = https://github.com/doozMen/ios-zfile.git
+[submodule "Carthage/Checkouts/zfile"]
+	path = Carthage/Checkouts/zfile
+	url = https://github.com/doozMen/zfile.git
