--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Carthage/Checkouts/zfile"]
 	path = Carthage/Checkouts/zfile
 	url = https://github.com/doozMen/zfile.git
+[submodule "Carthage/Checkouts/Sourcery"]
+	path = Carthage/Checkouts/Sourcery
+	url = https://github.com/krzysztofzablocki/Sourcery.git
