--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Carthage/Checkouts/Sourcery"]
 	path = Carthage/Checkouts/Sourcery
 	url = https://github.com/krzysztofzablocki/Sourcery.git
+[submodule "Carthage/Checkouts/template-sourcery"]
+	path = Carthage/Checkouts/template-sourcery
+	url = https://github.com/doozMen/template-sourcery.git
