Possible to run from command line
Had to add all the frameworks as a dependency to make the command run without complaints. This could be more optimal

--- a/🛣.xcodeproj/xcshareddata/xcschemes/Automate.xcscheme
+++ b/🛣.xcodeproj/xcshareddata/xcschemes/Automate.xcscheme
@@ -61,6 +61,12 @@
             ReferencedContainer = "container:&#x1f6e3;.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "&#x1f916;command:sourcery"
+            isEnabled = "NO">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
