Removing Highway way of working. Moving towards an automate target that you should build in swift
This is a radical change from the original highway project. Because it became to hard to maintain frameworks that are no longer used they where removed. If at any moment they prove to be of value they should be added again.

--- a/🛣.xcodeproj/xcshareddata/xcschemes/Automate.xcscheme
+++ b/🛣.xcodeproj/xcshareddata/xcschemes/Automate.xcscheme
@@ -28,6 +28,26 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "FD1126D321C77F050072607D"
+               BuildableName = "SignPostTests.xctest"
+               BlueprintName = "SignPostTests"
+               ReferencedContainer = "container:&#x1f6e3;.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "FDEC119721C65D9400CB7DAD"
+               BuildableName = "AutomateTests.xctest"
+               BlueprintName = "AutomateTests"
+               ReferencedContainer = "container:&#x1f6e3;.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
