Temporary fix to be able to embed the project file in a project that already contains ZFile

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /🛣.xcodeproj/project.xcworkspace/xcuserdata
 /🛣.xcodeproj/xcuserdata
 .build.nosync
+/EmbedHighWay/🛣.xcodeproj/xcuserdata
+/EmbedHighWay/🛣.xcodeproj/project.xcworkspace/xcuserdata
