#9 Temporary fix with EmbedHighway is fixed by having a seperate AutomateProject

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 .build.nosync
 /EmbedHighWay/🛣.xcodeproj/xcuserdata
 /EmbedHighWay/🛣.xcodeproj/project.xcworkspace/xcuserdata
+/Automate🛣.xcodeproj/xcuserdata/doozmen.xcuserdatad
+/Automate🛣/Automate🛣.xcodeproj/xcuserdata
+/Automate🛣/Automate🛣.xcodeproj/project.xcworkspace/xcuserdata
+/Automate🛣.xcodeproj/project.xcworkspace/xcuserdata
