--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,12 @@
 [submodule "Carthage/Checkouts/template-sourcery"]
 	path = Carthage/Checkouts/template-sourcery
 	url = https://github.com/doozMen/template-sourcery.git
+[submodule "Carthage/Checkouts/TestAppDelegateExample"]
+	path = Carthage/Checkouts/TestAppDelegateExample
+	url = https://github.com/mokacoding/TestAppDelegateExample.git
+[submodule "Carthage/Checkouts/Quick"]
+	path = Carthage/Checkouts/Quick
+	url = https://github.com/doozMen/Quick.git
+[submodule "Carthage/Checkouts/Nimble"]
+	path = Carthage/Checkouts/Nimble
+	url = https://github.com/doozMen/Nimble.git
