removing not needed YML files for sourcery as they are generated

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,16 @@
 /Automate🛣/Automate🛣.xcodeproj/xcuserdata
 /Automate🛣/Automate🛣.xcodeproj/project.xcworkspace/xcuserdata
 /Automate🛣.xcodeproj/project.xcworkspace/xcuserdata
+/.sourcery-XCBuild.yml
+/.sourcery-Url.yml
+/.sourcery-Terminal.yml
+/.sourcery-Task.yml
+/.sourcery-SourceryWorker.yml
+/.sourcery-SignPost.yml
+/.sourcery-Result.yml
+/.sourcery-POSIX.yml
+/.sourcery-Keychain.yml
+/.sourcery-Git.yml
+/.sourcery-Errors.yml
+/.sourcery-Deliver.yml
+/.sourcery-Arguments.yml
