--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,19 @@
+
+[submodule "Carthage/Checkouts/Quick"]
+	path = Sources/Carthage/Checkouts/Quick
+	url = https://github.com/doozMen/Quick.git
+[submodule "Carthage/Checkouts/zfile"]
+	path = Sources/Carthage/Checkouts/zfile
+	url = https://github.com/doozMen/zfile.git
+[submodule "Carthage/Checkouts/TestAppDelegateExample"]
+	path = Sources/Carthage/Checkouts/TestAppDelegateExample
+	url = https://github.com/mokacoding/TestAppDelegateExample.git
 [submodule "Carthage/Checkouts/Sourcery"]
 	path = Sources/Carthage/Checkouts/Sourcery
 	url = https://github.com/krzysztofzablocki/Sourcery.git
+[submodule "Carthage/Checkouts/template-sourcery"]
+	path = Sources/Carthage/Checkouts/template-sourcery
+	url = https://github.com/doozMen/template-sourcery.git
 [submodule "Carthage/Checkouts/Nimble"]
 	path = Sources/Carthage/Checkouts/Nimble
 	url = https://github.com/doozMen/Nimble.git
