--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@
 /Sources/highway/.sourcery-Errors.yml
 /Sources/highway/.sourcery-Deliver.yml
 /Sources/highway/.sourcery-Arguments.yml
+/Sources/highway/🛣.xcodeproj/xcuserdata
+/Sources/highway/Automate🛣.xcodeproj/project.xcworkspace/xcuserdata
