--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@
 /Sources/highway/.sourcery-Arguments.yml
 /Sources/highway/🛣.xcodeproj/xcuserdata
 /Sources/highway/Automate🛣.xcodeproj/project.xcworkspace/xcuserdata
+/Sources/highway/Automate🛣.xcodeproj/xcuserdata
