--- a/Sources/.gitmodules
+++ b/Sources/.gitmodules
@@ -10,3 +10,5 @@
 	url = https://github.com/mokacoding/TestAppDelegateExample.git
 [submodule "Carthage/Checkouts/template-sourcery"]
 	url = https://github.com/doozMen/template-sourcery.git
+[submodule "Carthage/Checkouts/ZFile"]
+	url = https://github.com/doozMen/ZFile.git
