--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "Carthage/Checkouts/CryptoSwift"]
 	path = Sources/Carthage/Checkouts/CryptoSwift
 	url = https://github.com/doozMen/CryptoSwift.git
+[submodule "Carthage/Checkouts/CupertinoJWT"]
+	path = Sources/Carthage/Checkouts/CupertinoJWT
+	url = https://github.com/ethanhuang13/CupertinoJWT.git
