--- a/Sources/highway/Sources/AutomateHighway/Info.plist
+++ b/Sources/highway/Sources/AutomateHighway/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>BE_DOOZ_SRCROOT</key>
+	<string>$(SRCROOT)</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -25,10 +27,8 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSMainStoryboardFile</key>
-	<string>Main</string>
+	<string>AutomateMain</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
-	<key>BE_DOOZ_SRCROOT</key>
-	<string>$(SRCROOT)</string>
 </dict>
 </plist>
