#8 swiftformat reports success but I do not see any changes

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "Carthage/Checkouts/ZFile"]
 	path = Sources/Carthage/Checkouts/ZFile
 	url = https://github.com/doozMen/ZFile.git
+[submodule "Carthage/Checkouts/SwiftFormat"]
+	path = Sources/Carthage/Checkouts/SwiftFormat
+	url = https://github.com/nicklockwood/SwiftFormat.git
