--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ xcuserdata/
 .gitsecret/keys/random_seed
 /Sources/highway/Sources/AutomateHighway/AuthKey_VV7NT37UVU.p8
 Carthage
+/Sources/highway/.build
