--- a/Sources/highway/Highway.xcodeproj/xcshareddata/xcschemes/AutomateHighway.xcscheme
+++ b/Sources/highway/Highway.xcodeproj/xcshareddata/xcschemes/AutomateHighway.xcscheme
@@ -66,6 +66,10 @@
             argument = "-srcRoot /../../../../../../../"
             isEnabled = "YES">
          </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-verbose"
+            isEnabled = "YES">
+         </CommandLineArgument>
       </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
